# job_search_app

./: README.md  main.py  pyproject.toml  vacancies.json
src/: abstract_saver.py  abstract_searchjobapi.py  headhunterapi.py  jsonsaver.py  user_interaction.py  vacancy.py
tests/: test_headhunterapi.py  test_jsonsaver.py  test_vacancy.py
